--- a/index.html
+++ b/index.html
@@ -5,68 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mondrian Project</title>
-  <style>
-    .container{
-      display: grid;
-      height: 748px;
-      width: 748px;
-      background-color: #000;
-      grid-template-columns: 320px 198px 153px 50px;
-      grid-template-rows:414px 130px 150px 20px ;
-      gap: 9px;
-    }
-    .red{
-      background-color:#E72F24 ;
-    }
-
-    .white1{
-      background-color: #F0F1EC;
-      grid-column: span 3;
-    }
-
-    .white2{
-      background-color: #F0F1EC;
-      grid-area: 2 / 1 / 4;
-    }
-
-    .white3{
-      background-color: #F0F1EC;
-      grid-column: span 2;
-      grid-row: span 2;
-    }
-
-    .blue{
-      background-color:#004592 ;
-      grid-row: span 1;
-      border: #000 10px;
-    }
-
-    .white4{
-      background-color: #F0F1EC;
-      grid-column: span 1;
-      grid-row: span 3;
-    }
-
-    .white5{
-      background-color: #F0F1EC;
-      grid-column: span 1;
-      grid-row: span 2;
-    }
-
-    .yellow{
-      background-color: #F9D01E;
-      grid-column: span 1;
-      grid-row: span 2;
-    }
-
-    .black{
-      background-color: #000;
-     
-    
-    }
-
-
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
